added rounded-square png for aggregation type icon

--- a/widget.html
+++ b/widget.html
@@ -242,34 +242,46 @@
         });
     </script>
     <style>
-        #widget {
+        .sum {
+            background-image: url("images/sum.png"), url("rounded-square.png");
             background-repeat: no-repeat;
             background-position: top 6px right 6px;
             background-size: 14px;
         }
 
-        .sum-aggregation {
-            background-image: url("/images/sum.png");
+        .highest {
+            background-image: url("images/highest.png"), url("rounded-square.png");
+            background-repeat: no-repeat;
+            background-position: top 6px right 6px;
+            background-size: 14px;
         }
 
-        .highest-aggregation {
-            background-image: url("/images/highest.png");
+        .lowest {
+            background-image: url("images/lowest.png"), url("rounded-square.png");
+            background-repeat: no-repeat;
+            background-position: top 6px right 6px;
+            background-size: 14px;
         }
 
-        .lowest-aggregation {
-            background-image: url("/images/lowest.png");
+        .average {
+            background-image: url("images/average.png"), url("rounded-square.png");
+            background-repeat: no-repeat;
+            background-position: top 6px right 6px;
+            background-size: 14px;
         }
 
-        .average-aggregation {
-            background-image: url("/images/average.png");
+        .countempty {
+            background-image: url("images/countempty.png"), url("rounded-square.png");
+            background-repeat: no-repeat;
+            background-position: top 6px right 6px;
+            background-size: 14px;
         }
 
-        .countempty-aggregation {
-            background-image: url("/images/countempty.png");
-        }
-
-        .countnotempty-aggregation {
-            background-image: url("/images/countnotempty.png");
+        .countnotempty {
+            background-image: url("images/countnotempty.png"), url("rounded-square.png");
+            background-repeat: no-repeat;
+            background-position: top 6px right 6px;
+            background-size: 14px;
         }
 
         div.flex_container {
