prevents IE not supported and corrects sum icons

--- a/widget.html
+++ b/widget.html
@@ -33,11 +33,45 @@
             }
         }
 
+        /**
+        * detect IE
+        * returns version of IE or false, if browser is not Internet Explorer
+        */
+        function detectIE() {
+            var ua = window.navigator.userAgent;
+
+            var msie = ua.indexOf('MSIE ');
+            if (msie > 0) {
+                // IE 10 or older => return version number
+                return parseInt(ua.substring(msie + 5, ua.indexOf('.', msie)), 10);
+            }
+
+            var trident = ua.indexOf('Trident/');
+            if (trident > 0) {
+                // IE 11 => return version number
+                var rv = ua.indexOf('rv:');
+                return parseInt(ua.substring(rv + 3, ua.indexOf('.', rv)), 10);
+            }
+
+            var edge = ua.indexOf('Edge/');
+            if (edge > 0) {
+                // Edge (IE 12+) => return version number
+                return parseInt(ua.substring(edge + 5, ua.indexOf('.', edge)), 10);
+            }
+
+            // other browser
+            return false;
+        }
+
         //Init
         var debug = false;
         var info = false;
         configureLog();
         var settings;
+
+        if (detectIE() !== false) {
+            return WidgetHelpers.WidgetStatusHelper.Failure("IE not supported, please use Firefox or Chrome instead !");
+        }
 
         VSS.require(["TFS/Dashboards/WidgetHelpers", "TFS/WorkItemTracking/RestClient"], function (WidgetHelpers, RestClient) {
             logDebug("VSS.require()");
@@ -243,45 +277,38 @@
     </script>
     <style>
         .sum {
-            background-image: url("images/sum.png"), url("rounded-square.png");
-            background-repeat: no-repeat;
-            background-position: top 6px right 6px;
-            background-size: 14px;
+            background-image: url("images/sum.png"), url("images/rounded_square.png");
         }
 
         .highest {
-            background-image: url("images/highest.png"), url("rounded-square.png");
-            background-repeat: no-repeat;
-            background-position: top 6px right 6px;
-            background-size: 14px;
+            background-image: url("images/highest.png"), url("images/rounded_square.png");
         }
 
         .lowest {
-            background-image: url("images/lowest.png"), url("rounded-square.png");
-            background-repeat: no-repeat;
-            background-position: top 6px right 6px;
-            background-size: 14px;
+            background-image: url("images/lowest.png"), url("images/rounded_square.png");
         }
 
         .average {
-            background-image: url("images/average.png"), url("rounded-square.png");
-            background-repeat: no-repeat;
-            background-position: top 6px right 6px;
-            background-size: 14px;
+            background-image: url("images/average.png"), url("images/rounded_square.png");
         }
 
         .countempty {
-            background-image: url("images/countempty.png"), url("rounded-square.png");
-            background-repeat: no-repeat;
-            background-position: top 6px right 6px;
-            background-size: 14px;
+            background-image: url("images/countempty.png"), url("images/rounded_square.png");
         }
 
         .countnotempty {
-            background-image: url("images/countnotempty.png"), url("rounded-square.png");
+            background-image: url("images/countnotempty.png"), url("images/rounded_square.png");
+        }
+
+        .sum,
+        .highest,
+        .lowest,
+        .average,
+        .countempty,
+        .countnotempty {
             background-repeat: no-repeat;
-            background-position: top 6px right 6px;
-            background-size: 14px;
+            background-position: top 6px right 6px, top 3px right 3px;
+            background-size: 14px, 20px;
         }
 
         div.flex_container {
