added default values

--- a/configuration.html
+++ b/configuration.html
@@ -17,7 +17,7 @@
 				info = urlParams.has("info");
 			}
 			catch (exception) {
-				console.log("unable to configure Log");
+				console.log("Unable to configure Log");
 			}
 		}
 
